Tried to fix the contact form on smaller screens

--- a/assets/scss/components/_contact.scss
+++ b/assets/scss/components/_contact.scss
@@ -2,14 +2,13 @@
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/ContactBG.jpeg") no-repeat;
     background-size: cover;
     width: 100%;
-    height: 95vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     &__box {
         width: 70%;
-        height: 70vh;
+        height: 60rem;
         box-sizing: border-box;
         display: flex;
         &--white {
@@ -52,9 +51,9 @@
         margin: auto;
         display: block;
         width: 100%;
-        height: 20rem;
-        min-height: 3rem;
-        max-height: 35rem;
+        height: 15rem;
+        min-height: 3.8rem;
+        max-height: 27rem;
         resize: vertical;
         border: 1px solid $color-logo-grey;
         font-size: $font-size-default;
@@ -62,6 +61,7 @@
         font-weight: 400;
         line-height: 1.7;
         padding: 3px;
+        box-sizing: border-box;
         &::placeholder {
             font-family: "Roboto", sans-serif;
             font-weight: 400;
